# CapacityLease_20260311

./: .gitignore  CpctLeaseFinal.tex  README.md  pyproject.toml
capacitylease/: __init__.py  cli.py  config.py  diagnostics.py  distributions.py  flexible.py  io_utils.py  market_clearing.py  models.py  monopoly.py  numerical.py  paper_audit.py  parallel.py  plotting.py  runner.py
capacitylease_code_verification.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
configs/: paper_figures_consistent.json  paper_strict_text.json  smoke_test.json
outputs/paper_audit/: paper_config_comparison.json
outputs/paper_figures_consistent/data/: flex_curve_at_optimal_capacity.csv  flexible_capacity_sweep.csv  market_clearing_capacity_sweep.csv  market_curve_at_optimal_capacity.csv  monopoly_curve.csv
outputs/paper_figures_consistent/figures/: MNO_MVNO_CapacityBlocks.eps  MVNO_MNO_Prices.eps  MVNO_MNO_Revenue.eps  Optimal_Prices_vs_Capacity.eps  monopoly_Ag_r.eps  monopoly_n_R.eps
outputs/paper_figures_consistent/reports/: claim_check.json  delta_consistency.json  monopoly_optimum.json  paper_table_alignment.json  parameter_sensitivity.json  root_stability.json  solver_certification.json  summary.json  timing.json
outputs/paper_strict_text/data/: flex_curve_at_optimal_capacity.csv  flexible_capacity_sweep.csv  market_clearing_capacity_sweep.csv  monopoly_curve.csv
outputs/paper_strict_text/figures/: MNO_MVNO_CapacityBlocks.eps  (+5 more)
scripts/: setup_venv.sh  slurm_diagnostics.sh  slurm_paper_audit.sh  slurm_reproduce_figures.sh  slurm_reproduce_text.sh  slurm_smoke_test.sh
(+22 files in other folders)
