[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capacitylease-code-verification"
version = "0.1.0"
description = "Simulation and numerical verification package for CapacityLease paper"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["capacitylease"]
